Fix dots on mobile

--- a/src/components/bloglist/BlogList.css
+++ b/src/components/bloglist/BlogList.css
@@ -247,10 +247,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 1rem;
+    gap: 0.5rem;
     margin-top: 0rem;
     background:none;
-    margin-left: 1rem;
+    margin-left: 0rem;
     padding: 0.25rem 0;
     position: relative;
   }
